// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files 1`] = `
[
  "course-status.enum.ts",
  "course-types.enum.ts",
  "course.form-group-fac.ts",
  "course.form.ts",
  "course.model.ts",
  "course.properties.ts",
  "course.test-obj-fac.ts",
  "endpoints.ts",
  "gender.enum.ts",
  "index.ts",
  "school-course.form-group-fac.ts",
  "school-course.form.ts",
  "school-course.model.ts",
  "school-course.properties.ts",
  "school-course.test-obj-fac.ts",
  "school.form-group-fac.ts",
  "school.form.ts",
  "school.model.ts",
  "school.properties.ts",
  "school.test-obj-fac.ts",
  "student-course.form-group-fac.ts",
  "student-course.form.ts",
  "student-course.model.ts",
  "student-course.properties.ts",
  "student-course.test-obj-fac.ts",
  "student-school.form-group-fac.ts",
  "student-school.form.ts",
  "student-school.model.ts",
  "student-school.properties.ts",
  "student-school.test-obj-fac.ts",
  "student.form-group-fac.ts",
  "student.form.ts",
  "student.model.ts",
  "student.properties.ts",
  "student.test-obj-fac.ts",
]
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: course.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { CourseStatus } from './course-status.enum';
import { IStudentCourseForm } from './student-course.form';
import { ISchoolCourseForm } from './school-course.form';
import { CourseTypes } from './course-types.enum';

export interface ICourseForm {
    id: FormControl<string | null | undefined>;
    department: FormControl<string>;
    num: FormControl<string>;
    title: FormControl<string>;
    description: FormControl<string | null | undefined>;
    passRate: FormControl<number | null | undefined>;
    avgScore: FormControl<number | null | undefined>;
    updateCount: FormControl<number | null | undefined>;
    status: FormControl<CourseStatus | string | null | undefined>;
    studentCourses: FormArray<FormGroup<IStudentCourseForm>>;
    schoolCourses: FormArray<FormGroup<ISchoolCourseForm>>;
    courseTypes: FormArray<FormControl<CourseTypes | string>>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: course.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ICourseForm } from './course.form';
import { CourseStatus } from './course-status.enum';
import { IStudentCourseForm } from './student-course.form';
import { ISchoolCourseForm } from './school-course.form';
import { CourseTypes } from './course-types.enum';

export function CourseFormGroupFac(): FormGroup<ICourseForm> {
  return new FormGroup<ICourseForm>({
    id: new FormControl<string | null | undefined>(undefined),
    department: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(150)]), nonNullable: true }),
    num: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(10)]), nonNullable: true }),
    title: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(150)]), nonNullable: true }),
    description: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(500) } ),
    passRate: new FormControl<number | null | undefined>(undefined),
    avgScore: new FormControl<number | null | undefined>(undefined),
    updateCount: new FormControl<number | null | undefined>(undefined),
    status: new FormControl<CourseStatus | string | null | undefined>(undefined),
    studentCourses: new FormArray<FormGroup<IStudentCourseForm>>([]),
    schoolCourses: new FormArray<FormGroup<ISchoolCourseForm>>([]),
    courseTypes: new FormArray<FormControl<CourseTypes | string>>([]),
  });
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: course.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { CourseStatus } from './course-status.enum';
import { IStudentCourse } from './student-course.model';
import { ISchoolCourse } from './school-course.model';
import { CourseTypes } from './course-types.enum';

/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface ICourse {
  id?: string | null;
  department?: string;
  num?: string;
  title?: string;
  description?: string | null;
  passRate?: number | null;
  avgScore?: number | null;
  updateCount?: number | null;
  status?: CourseStatus | string;
  studentCourses?: Partial<IStudentCourse[]>;
  schoolCourses?: Partial<ISchoolCourse[]>;
  courseTypes?: CourseTypes[] | string[];
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: course.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum CourseProperties {
  ID = 'id',
  DEPARTMENT = 'department',
  NUM = 'num',
  TITLE = 'title',
  DESCRIPTION = 'description',
  PASS_RATE = 'passRate',
  AVG_SCORE = 'avgScore',
  UPDATE_COUNT = 'updateCount',
  STATUS = 'status',
  STUDENT_COURSES = 'studentCourses',
  SCHOOL_COURSES = 'schoolCourses',
  COURSE_TYPES = 'courseTypes',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: course.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { CourseStatus } from './course-status.enum';
import { CourseTypes } from './course-types.enum';
import { CourseProperties } from './course.properties';

export function createTestCourse() {
    return { 
      [CourseProperties.ID]: 'ID',
      [CourseProperties.DEPARTMENT]: 'DEPARTMENT',
      [CourseProperties.NUM]: 'NUM',
      [CourseProperties.TITLE]: 'TITLE',
      [CourseProperties.DESCRIPTION]: 'DESCRIPTION',
      [CourseProperties.PASS_RATE]: 0,
      [CourseProperties.AVG_SCORE]: 0,
      [CourseProperties.UPDATE_COUNT]: 0,
      [CourseProperties.STATUS]: CourseStatus.PendingCertification,
      [CourseProperties.STUDENT_COURSES]: [],
      [CourseProperties.SCHOOL_COURSES]: [],
      [CourseProperties.COURSE_TYPES]: [CourseTypes.Lab],
    };
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: course-status.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { IEnumValue } from 'openapi-ts-generator/enums';

export enum CourseStatus {
  PendingCertification = 0,
  Certified = 1,
  Finalized = 8,
}

export enum CourseStatusNames {
  PENDING_CERTIFICATION = 'PendingCertification',
  CERTIFIED = 'Certified',
  FINALIZED = 'Finalized',
}

export const courseStatusValues : IEnumValue[] = [
  { key: 0, name: 'PendingCertification', displayText: 'Pending Certification'},
  { key: 1, name: 'Certified', displayText: 'Certified'},
  { key: 8, name: 'Finalized', displayText: 'Finalized'},
];
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: course-types.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { IEnumValue } from 'openapi-ts-generator/enums';

export enum CourseTypes {
  Lab = 'L',
  Online = 'O',
  OnSite = 'S',
}

export enum CourseTypeNames {
  LAB = 'Lab',
  ONLINE = 'Online',
  ON_SITE = 'OnSite',
}

export const courseTypeValues : IEnumValue[] = [
  { key: 'L', name: 'Lab', displayText: 'Lab'},
  { key: 'O', name: 'Online', displayText: 'Online'},
  { key: 'S', name: 'OnSite', displayText: 'On Site'},
];
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum Endpoints {
  courses = '/odata/v1/Courses',
  schools = '/odata/v1/Schools',
  schools2 = '/odata/v1/Schools({key})',
  schoolsNolimit = '/odata/v1/schools/nolimit',
  schools2 = '/odata/v1/Schools/{key}',
  students = '/odata/v1/Students',
  students2 = '/odata/v1/Students({key})',
  studentsNolimit = '/odata/v1/students/nolimit',
  students2 = '/odata/v1/Students/{key}',
}
export interface IEndpoints {
  readonly courses: string;
  readonly schools: string;
  readonly schools2: string;
  readonly schoolsNolimit: string;
  readonly schools2: string;
  readonly students: string;
  readonly students2: string;
  readonly studentsNolimit: string;
  readonly students2: string;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: gender.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { IEnumValue } from 'openapi-ts-generator/enums';

export enum Gender {
  Male = 1,
  Female = 2,
  Other = 3,
  Unknown = 4,
}

export enum GenderNames {
  MALE = 'Male',
  FEMALE = 'Female',
  OTHER = 'Other',
  UNKNOWN = 'Unknown',
}

export const genderValues : IEnumValue[] = [
  { key: 1, name: 'Male', displayText: 'Male'},
  { key: 2, name: 'Female', displayText: 'Female'},
  { key: 3, name: 'Other', displayText: 'Other'},
  { key: 4, name: 'Unknown', displayText: 'Unknown'},
];
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #index.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export * from './course-status.enum';
export * from './course-types.enum';
export * from './course.form-group-fac';
export * from './course.form';
export * from './course.model';
export * from './course.properties';
export * from './course.test-obj-fac';
export * from './gender.enum';
export * from './school-course.form-group-fac';
export * from './school-course.form';
export * from './school-course.model';
export * from './school-course.properties';
export * from './school-course.test-obj-fac';
export * from './school.form-group-fac';
export * from './school.form';
export * from './school.model';
export * from './school.properties';
export * from './school.test-obj-fac';
export * from './student-course.form-group-fac';
export * from './student-course.form';
export * from './student-course.model';
export * from './student-course.properties';
export * from './student-course.test-obj-fac';
export * from './student-school.form-group-fac';
export * from './student-school.form';
export * from './student-school.model';
export * from './student-school.properties';
export * from './student-school.test-obj-fac';
export * from './student.form-group-fac';
export * from './student.form';
export * from './student.model';
export * from './student.properties';
export * from './student.test-obj-fac';
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ISchoolCourseForm } from './school-course.form';
import { IStudentSchoolForm } from './student-school.form';

export interface ISchoolForm {
    id: FormControl<string | null | undefined>;
    name: FormControl<string>;
    fullName: FormControl<string>;
    tenantId: FormControl<string>;
    updateCount: FormControl<number | null | undefined>;
    schoolCourses: FormArray<FormGroup<ISchoolCourseForm>>;
    studentSchools: FormArray<FormGroup<IStudentSchoolForm>>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ISchoolForm } from './school.form';
import { ISchoolCourseForm } from './school-course.form';
import { IStudentSchoolForm } from './student-school.form';

export function SchoolFormGroupFac(): FormGroup<ISchoolForm> {
  return new FormGroup<ISchoolForm>({
    id: new FormControl<string | null | undefined>(undefined),
    name: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(50)]), nonNullable: true }),
    fullName: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(250)]), nonNullable: true }),
    tenantId: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(5)]), nonNullable: true }),
    updateCount: new FormControl<number | null | undefined>(undefined),
    schoolCourses: new FormArray<FormGroup<ISchoolCourseForm>>([]),
    studentSchools: new FormArray<FormGroup<IStudentSchoolForm>>([]),
  });
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISchoolCourse } from './school-course.model';
import { IStudentSchool } from './student-school.model';

/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface ISchool {
  id?: string | null;
  name?: string;
  fullName?: string;
  tenantId?: string;
  updateCount?: number | null;
  schoolCourses?: Partial<ISchoolCourse[]>;
  studentSchools?: Partial<IStudentSchool[]>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum SchoolProperties {
  ID = 'id',
  NAME = 'name',
  FULL_NAME = 'fullName',
  TENANT_ID = 'tenantId',
  UPDATE_COUNT = 'updateCount',
  SCHOOL_COURSES = 'schoolCourses',
  STUDENT_SCHOOLS = 'studentSchools',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { SchoolProperties } from './school.properties';

export function createTestSchool() {
    return { 
      [SchoolProperties.ID]: 'ID',
      [SchoolProperties.NAME]: 'NAME',
      [SchoolProperties.FULL_NAME]: 'FULL_NAME',
      [SchoolProperties.TENANT_ID]: 'TENAN',
      [SchoolProperties.UPDATE_COUNT]: 0,
      [SchoolProperties.SCHOOL_COURSES]: [],
      [SchoolProperties.STUDENT_SCHOOLS]: [],
    };
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school-course.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ISchoolForm } from './school.form';
import { ICourseForm } from './course.form';

export interface ISchoolCourseForm {
    id: FormControl<string | null | undefined>;
    schoolId: FormControl<string>;
    courseId: FormControl<string>;
    passRate: FormControl<number>;
    avgScore: FormControl<number>;
    updateCount: FormControl<number | null | undefined>;
    school: FormGroup<ISchoolForm>;
    course: FormGroup<ICourseForm>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school-course.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ISchoolCourseForm } from './school-course.form';
import { ISchoolForm } from './school.form';
import { SchoolFormGroupFac } from './school.form-group-fac';
import { ICourseForm } from './course.form';
import { CourseFormGroupFac } from './course.form-group-fac';

export function SchoolCourseFormGroupFac(): FormGroup<ISchoolCourseForm> {
  return new FormGroup<ISchoolCourseForm>({
    id: new FormControl<string | null | undefined>(undefined),
    schoolId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    courseId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    passRate: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    avgScore: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    updateCount: new FormControl<number | null | undefined>(undefined),
    school: new FormGroup<ISchoolForm>(SchoolFormGroupFac().controls),
    course: new FormGroup<ICourseForm>(CourseFormGroupFac().controls),
  });
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school-course.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISchool } from './school.model';
import { ICourse } from './course.model';

/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface ISchoolCourse {
  id?: string | null;
  schoolId?: string;
  courseId?: string;
  passRate?: number;
  avgScore?: number;
  updateCount?: number | null;
  school?: Partial<ISchool>;
  course?: Partial<ICourse>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school-course.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum SchoolCourseProperties {
  ID = 'id',
  SCHOOL_ID = 'schoolId',
  COURSE_ID = 'courseId',
  PASS_RATE = 'passRate',
  AVG_SCORE = 'avgScore',
  UPDATE_COUNT = 'updateCount',
  SCHOOL = 'school',
  COURSE = 'course',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: school-course.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { SchoolCourseProperties } from './school-course.properties';

export function createTestSchoolCourse() {
    return { 
      [SchoolCourseProperties.ID]: 'ID',
      [SchoolCourseProperties.SCHOOL_ID]: 'SCHOOL_ID',
      [SchoolCourseProperties.COURSE_ID]: 'COURSE_ID',
      [SchoolCourseProperties.PASS_RATE]: 0,
      [SchoolCourseProperties.AVG_SCORE]: 0,
      [SchoolCourseProperties.UPDATE_COUNT]: 0,
      [SchoolCourseProperties.SCHOOL]: undefined,
      [SchoolCourseProperties.COURSE]: undefined,
    };
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { Gender } from './gender.enum';
import { IStudentCourseForm } from './student-course.form';
import { IStudentSchoolForm } from './student-school.form';

export interface IStudentForm {
    id: FormControl<string | null | undefined>;
    title: FormControl<string | null | undefined>;
    firstName: FormControl<string>;
    lastName: FormControl<string>;
    middleName: FormControl<string | null | undefined>;
    birthDate: FormControl<Date>;
    email: FormControl<string>;
    tel1: FormControl<string | null | undefined>;
    tel2: FormControl<string | null | undefined>;
    courseCount: FormControl<number | null | undefined>;
    updateCount: FormControl<number | null | undefined>;
    gender: FormControl<Gender | string>;
    studentCourses: FormArray<FormGroup<IStudentCourseForm>>;
    studentSchools: FormArray<FormGroup<IStudentSchoolForm>>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IStudentForm } from './student.form';
import { Gender } from './gender.enum';
import { IStudentCourseForm } from './student-course.form';
import { IStudentSchoolForm } from './student-school.form';

export function StudentFormGroupFac(): FormGroup<IStudentForm> {
  return new FormGroup<IStudentForm>({
    id: new FormControl<string | null | undefined>(undefined),
    title: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(50) } ),
    firstName: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(250)]), nonNullable: true }),
    lastName: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(250)]), nonNullable: true }),
    middleName: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(250) } ),
    birthDate: new FormControl<Date>(undefined, { validators: Validators.required, nonNullable: true } ),
    email: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.email, Validators.minLength(1), Validators.maxLength(250)]), nonNullable: true }),
    tel1: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(15) } ),
    tel2: new FormControl<string | null | undefined>(undefined, { validators: Validators.maxLength(15) } ),
    courseCount: new FormControl<number | null | undefined>(undefined),
    updateCount: new FormControl<number | null | undefined>(undefined),
    gender: new FormControl<Gender | string>(undefined, { validators: Validators.required, nonNullable: true } ),
    studentCourses: new FormArray<FormGroup<IStudentCourseForm>>([]),
    studentSchools: new FormArray<FormGroup<IStudentSchoolForm>>([]),
  });
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { Gender } from './gender.enum';
import { IStudentCourse } from './student-course.model';
import { IStudentSchool } from './student-school.model';

/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface IStudent {
  id?: string | null;
  title?: string | null;
  firstName?: string;
  lastName?: string;
  middleName?: string | null;
  birthDate?: Date;
  email?: string;
  tel1?: string | null;
  tel2?: string | null;
  courseCount?: number | null;
  updateCount?: number | null;
  gender?: Gender | string;
  studentCourses?: Partial<IStudentCourse[]>;
  studentSchools?: Partial<IStudentSchool[]>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum StudentProperties {
  ID = 'id',
  TITLE = 'title',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  BIRTH_DATE = 'birthDate',
  EMAIL = 'email',
  TEL_1 = 'tel1',
  TEL_2 = 'tel2',
  COURSE_COUNT = 'courseCount',
  UPDATE_COUNT = 'updateCount',
  GENDER = 'gender',
  STUDENT_COURSES = 'studentCourses',
  STUDENT_SCHOOLS = 'studentSchools',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { Gender } from './gender.enum';
import { StudentProperties } from './student.properties';

export function createTestStudent() {
    return { 
      [StudentProperties.ID]: 'ID',
      [StudentProperties.TITLE]: 'TITLE',
      [StudentProperties.FIRST_NAME]: 'FIRST_NAME',
      [StudentProperties.LAST_NAME]: 'LAST_NAME',
      [StudentProperties.MIDDLE_NAME]: 'MIDDLE_NAME',
      [StudentProperties.BIRTH_DATE]: new Date(),
      [StudentProperties.EMAIL]: 'student@email.org',
      [StudentProperties.TEL_1]: 'TEL_1',
      [StudentProperties.TEL_2]: 'TEL_2',
      [StudentProperties.COURSE_COUNT]: 0,
      [StudentProperties.UPDATE_COUNT]: 0,
      [StudentProperties.GENDER]: Gender.Unknown,
      [StudentProperties.STUDENT_COURSES]: [],
      [StudentProperties.STUDENT_SCHOOLS]: [],
    };
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-course.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IStudentForm } from './student.form';
import { ISchoolForm } from './school.form';
import { ICourseForm } from './course.form';
import { ISchoolCourseForm } from './school-course.form';

export interface IStudentCourseForm {
    id: FormControl<string | null | undefined>;
    studentId: FormControl<string>;
    schoolId: FormControl<string>;
    courseId: FormControl<string>;
    schoolCourseId: FormControl<string>;
    semester: FormControl<string>;
    finalScore: FormControl<number>;
    year: FormControl<number>;
    updateCount: FormControl<number | null | undefined>;
    student: FormGroup<IStudentForm>;
    school: FormGroup<ISchoolForm>;
    course: FormGroup<ICourseForm>;
    schoolCourse: FormGroup<ISchoolCourseForm>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-course.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IStudentCourseForm } from './student-course.form';
import { IStudentForm } from './student.form';
import { StudentFormGroupFac } from './student.form-group-fac';
import { ISchoolForm } from './school.form';
import { SchoolFormGroupFac } from './school.form-group-fac';
import { ICourseForm } from './course.form';
import { CourseFormGroupFac } from './course.form-group-fac';
import { ISchoolCourseForm } from './school-course.form';
import { SchoolCourseFormGroupFac } from './school-course.form-group-fac';

export function StudentCourseFormGroupFac(): FormGroup<IStudentCourseForm> {
  return new FormGroup<IStudentCourseForm>({
    id: new FormControl<string | null | undefined>(undefined),
    studentId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    schoolId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    courseId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    schoolCourseId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    semester: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(50)]), nonNullable: true }),
    finalScore: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    year: new FormControl<number>(undefined, { validators: Validators.required, nonNullable: true } ),
    updateCount: new FormControl<number | null | undefined>(undefined),
    student: new FormGroup<IStudentForm>(StudentFormGroupFac().controls),
    school: new FormGroup<ISchoolForm>(SchoolFormGroupFac().controls),
    course: new FormGroup<ICourseForm>(CourseFormGroupFac().controls),
    schoolCourse: new FormGroup<ISchoolCourseForm>(SchoolCourseFormGroupFac().controls),
  });
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-course.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IStudent } from './student.model';
import { ISchool } from './school.model';
import { ICourse } from './course.model';
import { ISchoolCourse } from './school-course.model';

/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface IStudentCourse {
  id?: string | null;
  studentId?: string;
  schoolId?: string;
  courseId?: string;
  schoolCourseId?: string;
  semester?: string;
  finalScore?: number;
  year?: number;
  updateCount?: number | null;
  student?: Partial<IStudent>;
  school?: Partial<ISchool>;
  course?: Partial<ICourse>;
  schoolCourse?: Partial<ISchoolCourse>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-course.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum StudentCourseProperties {
  ID = 'id',
  STUDENT_ID = 'studentId',
  SCHOOL_ID = 'schoolId',
  COURSE_ID = 'courseId',
  SCHOOL_COURSE_ID = 'schoolCourseId',
  SEMESTER = 'semester',
  FINAL_SCORE = 'finalScore',
  YEAR = 'year',
  UPDATE_COUNT = 'updateCount',
  STUDENT = 'student',
  SCHOOL = 'school',
  COURSE = 'course',
  SCHOOL_COURSE = 'schoolCourse',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-course.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { StudentCourseProperties } from './student-course.properties';

export function createTestStudentCourse() {
    return { 
      [StudentCourseProperties.ID]: 'ID',
      [StudentCourseProperties.STUDENT_ID]: 'STUDENT_ID',
      [StudentCourseProperties.SCHOOL_ID]: 'SCHOOL_ID',
      [StudentCourseProperties.COURSE_ID]: 'COURSE_ID',
      [StudentCourseProperties.SCHOOL_COURSE_ID]: 'SCHOOL_COURSE_ID',
      [StudentCourseProperties.SEMESTER]: 'SEMESTER',
      [StudentCourseProperties.FINAL_SCORE]: 0,
      [StudentCourseProperties.YEAR]: 0,
      [StudentCourseProperties.UPDATE_COUNT]: 0,
      [StudentCourseProperties.STUDENT]: undefined,
      [StudentCourseProperties.SCHOOL]: undefined,
      [StudentCourseProperties.COURSE]: undefined,
      [StudentCourseProperties.SCHOOL_COURSE]: undefined,
    };
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-school.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IStudentForm } from './student.form';
import { ISchoolForm } from './school.form';

export interface IStudentSchoolForm {
    id: FormControl<string | null | undefined>;
    schoolId: FormControl<string>;
    studentId: FormControl<string>;
    tenantId: FormControl<string>;
    enrollmentDate: FormControl<Date>;
    updateCount: FormControl<number | null | undefined>;
    student: FormGroup<IStudentForm>;
    school: FormGroup<ISchoolForm>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-school.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IStudentSchoolForm } from './student-school.form';
import { IStudentForm } from './student.form';
import { StudentFormGroupFac } from './student.form-group-fac';
import { ISchoolForm } from './school.form';
import { SchoolFormGroupFac } from './school.form-group-fac';

export function StudentSchoolFormGroupFac(): FormGroup<IStudentSchoolForm> {
  return new FormGroup<IStudentSchoolForm>({
    id: new FormControl<string | null | undefined>(undefined),
    schoolId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    studentId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    tenantId: new FormControl<string>(undefined, { validators: Validators.compose([Validators.required, Validators.minLength(1), Validators.maxLength(5)]), nonNullable: true }),
    enrollmentDate: new FormControl<Date>(undefined, { validators: Validators.required, nonNullable: true } ),
    updateCount: new FormControl<number | null | undefined>(undefined),
    student: new FormGroup<IStudentForm>(StudentFormGroupFac().controls),
    school: new FormGroup<ISchoolForm>(SchoolFormGroupFac().controls),
  });
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-school.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IStudent } from './student.model';
import { ISchool } from './school.model';

/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface IStudentSchool {
  id?: string | null;
  schoolId?: string;
  studentId?: string;
  tenantId?: string;
  enrollmentDate?: Date;
  updateCount?: number | null;
  student?: Partial<IStudent>;
  school?: Partial<ISchool>;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-school.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum StudentSchoolProperties {
  ID = 'id',
  SCHOOL_ID = 'schoolId',
  STUDENT_ID = 'studentId',
  TENANT_ID = 'tenantId',
  ENROLLMENT_DATE = 'enrollmentDate',
  UPDATE_COUNT = 'updateCount',
  STUDENT = 'student',
  SCHOOL = 'school',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample OData Microservice should generate files: student-school.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { StudentSchoolProperties } from './student-school.properties';

export function createTestStudentSchool() {
    return { 
      [StudentSchoolProperties.ID]: 'ID',
      [StudentSchoolProperties.SCHOOL_ID]: 'SCHOOL_ID',
      [StudentSchoolProperties.STUDENT_ID]: 'STUDENT_ID',
      [StudentSchoolProperties.TENANT_ID]: 'TENAN',
      [StudentSchoolProperties.ENROLLMENT_DATE]: new Date(),
      [StudentSchoolProperties.UPDATE_COUNT]: 0,
      [StudentSchoolProperties.STUDENT]: undefined,
      [StudentSchoolProperties.SCHOOL]: undefined,
    };
}
"
`;
